--- a/index.jade
+++ b/index.jade
@@ -8,10 +8,14 @@ html
   body
     include assets.svg
     svg(viewBox="0 0 1280 900")
-
       mask#caleydoscope-mask
         circle#js-c-mask1(r="100", fill="white", stroke="none", stroke-width="0", transform="translate(640,450)")
         circle#js-c-mask2(r="25", fill="black", stroke="none", stroke-width="0", transform="translate(640,450)", opacity="0")
+
+        g#js-c-blow(transform="translate(640,450)")
+          - for (var i = 0; i < 20; i++)
+            circle(r="25", fill="white")
+
 
       g#js-caleydoscope.caleydoscope(stroke='none', stroke-width='0', fill='none', fill-rule='evenodd', mask="url(#caleydoscope-mask)")
         g(transform="translate(422,231)")
