--- a/index.jade
+++ b/index.jade
@@ -106,6 +106,7 @@ html
     script(src="bower_components/velocity/jquery.velocity.min.js")
     script(src="js/helpers.js")
     script(src="js/spriter.js")
+    script(src="js/waves.js")
     script(src="js/main.js")
 
 
