--- a/index.jade
+++ b/index.jade
@@ -92,6 +92,7 @@ html
     script(src="js/spriter.js")
     script(src="js/waves.js")
     script(src="js/caleydoscope.js")
+    script(src="js/triangles.js")
     script(src="js/main.js")
 
 
