working on meets hands

--- a/index.jade
+++ b/index.jade
@@ -6,9 +6,9 @@ html
     link(rel="stylesheet", type="text/css", href="css/main.css")
   
   body
-    include assets.svg
+    include parts/assets.svg
     svg(viewBox="0 0 1280 900")
-      include meet.svg
+      include parts/meets
       //- include caleydoscope
       //- include triangles
       //- include waves.svg
