--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -19,21 +19,30 @@ mask#burst-mask
       path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="10", stroke-linecap="round")
       - angle = angle + step
 
-rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
-g#js-meets-cicles
-  - for (var i = 0; i < 20; i++ )
-    - var x = 640 + rand(-140,140);
-    - var y = 250 + rand(-50,50);
-    circle(fill="white", stroke="none", r="#{rand(50,100)}", transform="translate(#{x},#{y})")
-
 
 rect(width="1280", height="900", fill="url(#owls-pattern)", mask="url(#burst-mask)")
 
 g(stroke="none", stroke-width="1", fill="none", fill-rule="evenodd", transform="translate(23,130)")
   mask#meets-mask
-    g#MEETS(transform="translate(510, 200)", fill="white")
-      path#Mask(d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z", fill-opacity="0.1")
-      path#Mask(d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z")
+    g(transform="translate(510, 200)", fill="white")
+      g(transform="scale(50) translate(-1280,-200)")#js-meets
+        path#Mask(d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z", fill-opacity="0.1")
+        path#Mask(d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z")
+
+      //- g#js-meets-circles
+      //-   - for (var i = 0; i < 10; i++ )
+      //-     - var prevWidth  = width || 200;
+      //-     - var prevHeight = height || 100;
+      //-     - var xStep = 150;
+      //-     - var yStep = 100;
+      //-     - var width  = prevWidth  + xStep + i*20;
+      //-     - var height = prevHeight + yStep + i*20;
+      //-     - var centerX = 137;
+      //-     - var centerY = 45;
+      //-     - var x = -width/2 + centerX;
+      //-     - var y = -height/2+ centerY;
+      //-     rect.h-g(fill="none", rx="10", opacity="0", stroke="white", width="#{width}", height="#{height}" transform="translate(#{x},#{y})", stroke-width="#{3*(i+1) + (i*3)}")
+
   //- circle#js-circle(stroke-width="20", stroke="#{blue}", r="75", transform="translate(620,325)", opacity="0")
   g#right-hand(transform="translate(614.000000, 271.000000)")
     g#js-right-hand.h-g(transform="translate(0, 0)")
@@ -82,5 +91,6 @@ g(stroke="none", stroke-width="1", fill="none", fill-rule="evenodd", transform="
     circle#js-left-button.h-g(fill="#9A0009", cx="189.5", cy="87.5", r="7.5")
 
     
+rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
 
   
