--- a/index.jade
+++ b/index.jade
@@ -13,9 +13,9 @@ html
     include parts/assets.svg
     svg(viewBox="0 0 1280 900")
       include parts/meets
-      //- include caleydoscope
-      //- include triangles
-      //- include waves.svg
+      include parts/caleydoscope
+      include parts/triangles
+      include parts/waves.svg
 
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/velocity/jquery.velocity.min.js")
