--- a/index.jade
+++ b/index.jade
@@ -24,6 +24,7 @@ html
     script(src="js/waves.js")
     script(src="js/caleydoscope.js")
     script(src="js/triangles.js")
+    script(src="js/svg.js")
     script(src="js/meets.js")
     script(src="js/main.js")
 
