--- a/index.jade
+++ b/index.jade
@@ -16,6 +16,7 @@ html
       include parts/caleydoscope
       include parts/triangles
       include parts/waves.svg
+      include parts/svg
 
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/velocity/jquery.velocity.min.js")
