--- a/parts/svg.jade
+++ b/parts/svg.jade
@@ -14,7 +14,7 @@ g(stroke='none', stroke-width='1', fill='none', fill-rule='evenodd', transform="
   g(transform='translate(272.000000, 703.000000) rotate(-185.000000) translate(-272.000000, -703.000000) translate(95.000000, 469.000000)')
     rect(fill='url(#linearGradient-1)', transform='translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) ', x='137', y='327', width='119', height='132')
     rect(fill='#FFFFFF', transform='translate(176.562999, 181.701679) rotate(-15.000000) translate(-176.562999, -181.701679) ', x='33.6214332', y='31.4221551', width='285.883132', height='300.559048')
-  path#js-svg-t(d='M321,359 L398,476 L474,359 L321,359 Z', stroke='#979797', stroke-width='6')
+  path#js-svg-t(stroke-linecap="round", d='M321,359 L398,476 L474,359 L321,359 Z', stroke='#979797', stroke-width='6')
   //- text#stroke='#979797', stroke-width='3', fill='#979696', font-family='Lato', font-size='40.8888889', font-weight='206')
   //-   tspan(x='366', y='671') *SVG
 
