working on chain

--- a/parts/svg.jade
+++ b/parts/svg.jade
@@ -34,4 +34,4 @@ g(transform="translate(#{svgTranslate},0)").h-g#js-gradient
     rect(fill='url(#linearGradient-1)', transform='translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) ', x='137', y='327', width='119', height='132')
     rect(fill='#FFFFFF', transform='translate(176.562999, 181.701679) rotate(-15.000000) translate(-176.562999, -181.701679) ', x='33.6214332', y='31.4221551', width='285.883132', height='300.559048')
 
-rect(fill="url(#owls-pattern)", mask="url(#svg-text-mask)", width="1280", height="800")
+rect(fill="url(#wood-pattern)", mask="url(#svg-text-mask)", width="1280", height="800")
