--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -3,83 +3,83 @@ defs
     stop(stop-color="#FFFFFF", offset="0%")
     stop(stop-color="#FFFFFF", stop-opacity="0", offset="100%")
 
-- var blue = '#1F2947'
-- var burstLen = 25, burstStart = 100
+g#js-meets
+  - var blue = '#1F2947'
+  - var burstLen = 25, burstStart = 100
+  mask#burst-mask
+    g#js-meets-burst
+      - var cnt = 7, PI = 3.141598, rotateStep = 360/cnt, rotateAngle = 0;
+      - var centerX = 640, centerY = 450, radius = burstStart, radius2 = burstStart + burstLen, angle = 50;
+      - var step = (2*PI)/cnt, initRotate = 40;
+      - for (var i = 0; i < cnt; i++)
+        - var x1 = centerX + Math.cos(angle)*radius
+        - var y1 = centerY + Math.sin(angle)*radius
+        - var x2 = centerX + Math.cos(angle)*radius2
+        - var y2 = centerY + Math.sin(angle)*radius2
+        path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="10", stroke-linecap="round")
+        - angle = angle + step
 
-mask#burst-mask
-  g#js-meets-burst
-    - var cnt = 7, PI = 3.141598, rotateStep = 360/cnt, rotateAngle = 0;
-    - var centerX = 640, centerY = 450, radius = burstStart, radius2 = burstStart + burstLen, angle = 50;
-    - var step = (2*PI)/cnt, initRotate = 40;
-    - for (var i = 0; i < cnt; i++)
-      - var x1 = centerX + Math.cos(angle)*radius
-      - var y1 = centerY + Math.sin(angle)*radius
-      - var x2 = centerX + Math.cos(angle)*radius2
-      - var y2 = centerY + Math.sin(angle)*radius2
-      path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="10", stroke-linecap="round")
-      - angle = angle + step
+  rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
+  g#js-meets-circles
+    - for (var i = 0; i < 5; i++ )
+      - var x = 640 + rand(-140,140);
+      - var y = 250 + rand(-50,50);
+      circle(fill="white", stroke="none", r="#{rand(50,100)}", transform="translate(#{x},#{y})", data-x="#{x}", data-y="#{y}")
 
-rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
-g#js-meets-circles
-  - for (var i = 0; i < 10; i++ )
-    - var x = 640 + rand(-140,140);
-    - var y = 250 + rand(-50,50);
-    circle(fill="white", stroke="none", r="#{rand(50,100)}", transform="translate(#{x},#{y})", data-x="#{x}", data-y="#{y}")
+  rect(width="1280", height="900", fill="url(#owls-pattern)", mask="url(#burst-mask)")
 
-rect(width="1280", height="900", fill="url(#owls-pattern)", mask="url(#burst-mask)")
+  g(stroke="none", stroke-width="1", fill="none", fill-rule="evenodd", transform="translate(23,130)")
+    mask#meets-mask
+      g#MEETS(transform="translate(510, 200)", fill="white")
+        path#Mask(d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z", fill-opacity="0.1")
+        path#Mask(d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z")
+    //- circle#js-circle(stroke-width="20", stroke="#{blue}", r="75", transform="translate(620,325)", opacity="0")
+    g#right-hand(transform="translate(614.000000, 271.000000)")
+      g#js-right-hand.h-g(transform="translate(0, 0)")
+        rect#Rectangle-24(fill-opacity="0.1", fill="#1F2947", x="110", y="48", width="90", height="44")
+        rect#Rectangle-25(stroke="#1F2947", stroke-width="5", fill="#FBF7E8", x="114", y="40", width="90", height="44")
+        g#js-right-fist
+          g#js-right-fist-wrapper
+            path#Oval-48(d="M18.520939,112 C24.741821,124.235456 37.6220369,132.689487 60,133 C92.7298602,132.652008 119,106.538567 119,74 C119,42.1134415 92.7298602,16 60,16 C59.5508363,15.978829 59.0985319,15.9790176 58.6434551,16 L58.6434551,16 L13,16 C5.82029825,16 0,21.8202983 0,29 C0,34.404523 3.29797354,39.0387629 7.99120069,41 C3.29797354,42.9612371 0,47.595477 0,53 C0,57.9881625 2.80940026,62.3201544 6.93222506,64.5 C2.80940026,66.6798456 0,71.0118375 0,76 C0,80.9881625 2.80940026,85.3201544 6.93222506,87.5 C2.80940026,89.6798456 0,94.0118375 0,99 C0,106.179702 5.82029825,112 13,112 L18.520939,112 Z M6.11132812,41.4038086 L18.9257812,41.4038086 M6.11132812,64.4038086 L18.9257812,64.4038086 M6.11132812,87.4038086 L18.9257812,87.4038086 M19,112 L61,112", fill-opacity="0.1", fill="#1F2947")
+            path#Oval-46(d="M22.520939,106 C28.741821,118.235456 41.6220369,126.689487 64,127 C96.7298602,126.652008 123,100.538567 123,68 C123,36.1134415 96.7298602,10 64,10 C63.5508363,9.97882902 63.0985319,9.9790176 62.6434551,10 L62.6434551,10 L17,10 C9.82029825,10 4,15.8202983 4,23 C4,28.404523 7.29797354,33.0387629 11.9912007,35 C7.29797354,36.9612371 4,41.595477 4,47 C4,51.9881625 6.80940026,56.3201544 10.9322251,58.5 C6.80940026,60.6798456 4,65.0118375 4,70 C4,74.9881625 6.80940026,79.3201544 10.9322251,81.5 C6.80940026,83.6798456 4,88.0118375 4,93 C4,100.179702 9.82029825,106 17,106 L22.520939,106 Z M10.1113281,35.4038086 L22.9257812,35.4038086 M10.1113281,58.4038086 L22.9257812,58.4038086 M10.1113281,81.4038086 L22.9257812,81.4038086 M23,106 L65,106", stroke="#1F2947", stroke-width="5", fill="#FBF7E8")
+     
+        rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="25", width="27", height="80", rx="5")
+        rect.js-sleeve(fill="#FFFFFF", x="143", y="20", width="27", height="80", rx="5")
 
-g(stroke="none", stroke-width="1", fill="none", fill-rule="evenodd", transform="translate(23,130)")
-  mask#meets-mask
-    g#MEETS(transform="translate(510, 200)", fill="white")
-      path#Mask(d="M47.28,91 L66.36,91 L66.36,5.32 L46.08,5.32 L35.04,50.2 L23.88,5.32 L3.6,5.32 L3.6,91 L22.68,91 L22.68,52.36 L29.16,91 L41.04,91 L47.28,52.36 L47.28,91 Z M92.64,22 L113.4,22 L113.4,5.32 L73.56,5.32 L73.56,91 L113.4,91 L113.4,74.32 L92.64,74.32 L92.64,55.6 L107.4,55.6 L107.4,38.92 L92.64,38.92 L92.64,22 Z M139.68,22 L160.44,22 L160.44,5.32 L120.6,5.32 L120.6,91 L160.44,91 L160.44,74.32 L139.68,74.32 L139.68,55.6 L154.44,55.6 L154.44,38.92 L139.68,38.92 L139.68,22 Z M203.88,22 L221.04,22 L221.04,5.32 L167.64,5.32 L167.64,22 L184.8,22 L184.8,91 L203.88,91 L203.88,22 Z M253.32,20.56 C256.32,20.56 256.8,23.2 256.8,33.64 L277.68,33.64 C277.68,16 271.32,3.88 253.8,3.88 C234.36,3.88 229.32,10.84 229.32,28.48 C229.32,54.16 256.2,52.12 256.2,67.96 C256.2,72.76 255.72,75.76 252.84,75.76 C249.12,75.76 249.12,69.4 249.12,61.72 L228.24,61.72 C228.24,79.36 232.2,92.44 252.84,92.44 C274.92,92.44 277.08,82.48 277.08,68.08 C277.08,43.12 249.72,44.08 249.72,28.96 C249.72,22.12 250.68,20.56 253.32,20.56 L253.32,20.56 Z", fill-opacity="0.1")
-      path#Mask(d="M43.28,87 L62.36,87 L62.36,1.32 L42.08,1.32 L31.04,46.2 L19.88,1.32 L-0.4,1.32 L-0.4,87 L18.68,87 L18.68,48.36 L25.16,87 L37.04,87 L43.28,48.36 L43.28,87 Z M88.64,18 L109.4,18 L109.4,1.32 L69.56,1.32 L69.56,87 L109.4,87 L109.4,70.32 L88.64,70.32 L88.64,51.6 L103.4,51.6 L103.4,34.92 L88.64,34.92 L88.64,18 Z M135.68,18 L156.44,18 L156.44,1.32 L116.6,1.32 L116.6,87 L156.44,87 L156.44,70.32 L135.68,70.32 L135.68,51.6 L150.44,51.6 L150.44,34.92 L135.68,34.92 L135.68,18 Z M199.88,18 L217.04,18 L217.04,1.32 L163.64,1.32 L163.64,18 L180.8,18 L180.8,87 L199.88,87 L199.88,18 Z M249.32,16.56 C252.32,16.56 252.8,19.2 252.8,29.64 L273.68,29.64 C273.68,12 267.32,-0.12 249.8,-0.12 C230.36,-0.12 225.32,6.84 225.32,24.48 C225.32,50.16 252.2,48.12 252.2,63.96 C252.2,68.76 251.72,71.76 248.84,71.76 C245.12,71.76 245.12,65.4 245.12,57.72 L224.24,57.72 C224.24,75.36 228.2,88.44 248.84,88.44 C270.92,88.44 273.08,78.48 273.08,64.08 C273.08,39.12 245.72,40.08 245.72,24.96 C245.72,18.12 246.68,16.56 249.32,16.56 L249.32,16.56 Z")
-  //- circle#js-circle(stroke-width="20", stroke="#{blue}", r="75", transform="translate(620,325)", opacity="0")
-  g#right-hand(transform="translate(614.000000, 271.000000)")
-    g#js-right-hand.h-g(transform="translate(0, 0)")
-      rect#Rectangle-24(fill-opacity="0.1", fill="#1F2947", x="110", y="48", width="90", height="44")
-      rect#Rectangle-25(stroke="#1F2947", stroke-width="5", fill="#FBF7E8", x="114", y="40", width="90", height="44")
-      g#js-right-fist
-        g#js-right-fist-wrapper
-          path#Oval-48(d="M18.520939,112 C24.741821,124.235456 37.6220369,132.689487 60,133 C92.7298602,132.652008 119,106.538567 119,74 C119,42.1134415 92.7298602,16 60,16 C59.5508363,15.978829 59.0985319,15.9790176 58.6434551,16 L58.6434551,16 L13,16 C5.82029825,16 0,21.8202983 0,29 C0,34.404523 3.29797354,39.0387629 7.99120069,41 C3.29797354,42.9612371 0,47.595477 0,53 C0,57.9881625 2.80940026,62.3201544 6.93222506,64.5 C2.80940026,66.6798456 0,71.0118375 0,76 C0,80.9881625 2.80940026,85.3201544 6.93222506,87.5 C2.80940026,89.6798456 0,94.0118375 0,99 C0,106.179702 5.82029825,112 13,112 L18.520939,112 Z M6.11132812,41.4038086 L18.9257812,41.4038086 M6.11132812,64.4038086 L18.9257812,64.4038086 M6.11132812,87.4038086 L18.9257812,87.4038086 M19,112 L61,112", fill-opacity="0.1", fill="#1F2947")
-          path#Oval-46(d="M22.520939,106 C28.741821,118.235456 41.6220369,126.689487 64,127 C96.7298602,126.652008 123,100.538567 123,68 C123,36.1134415 96.7298602,10 64,10 C63.5508363,9.97882902 63.0985319,9.9790176 62.6434551,10 L62.6434551,10 L17,10 C9.82029825,10 4,15.8202983 4,23 C4,28.404523 7.29797354,33.0387629 11.9912007,35 C7.29797354,36.9612371 4,41.595477 4,47 C4,51.9881625 6.80940026,56.3201544 10.9322251,58.5 C6.80940026,60.6798456 4,65.0118375 4,70 C4,74.9881625 6.80940026,79.3201544 10.9322251,81.5 C6.80940026,83.6798456 4,88.0118375 4,93 C4,100.179702 9.82029825,106 17,106 L22.520939,106 Z M10.1113281,35.4038086 L22.9257812,35.4038086 M10.1113281,58.4038086 L22.9257812,58.4038086 M10.1113281,81.4038086 L22.9257812,81.4038086 M23,106 L65,106", stroke="#1F2947", stroke-width="5", fill="#FBF7E8")
-   
-      rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="25", width="27", height="80", rx="5")
-      rect.js-sleeve(fill="#FFFFFF", x="143", y="20", width="27", height="80", rx="5")
+        mask#right-shirt
+          rect#js-right-shirt.js-shirt(transform="translate(500,0)", fill="white", rx="5", x="770", y="288", width="282", height="97")
+        rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="35", height="39")
 
-      mask#right-shirt
-        rect#js-right-shirt.js-shirt(transform="translate(500,0)", fill="white", rx="5", x="770", y="288", width="282", height="97")
-      rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="35", height="39")
+    rect(width="1280", height="900", mask="url(#right-shirt)", fill="url(#blue-flowers-pattern)")
 
-  rect(width="1280", height="900", mask="url(#right-shirt)", fill="url(#blue-flowers-pattern)")
+    g#gradient-group(transform="translate(600,300)")
+      rect#white-rect(fill="#FFFFFF", x="440", y="-100", width="300", height="300")
+      rect#gradient(fill="url(#linearGradient-1)", x="264", y="-100", width="177", height="300")
+      circle#js-right-button.h-g(fill="#FFFFFF", cx="205", cy="67", r="7.5")
 
-  g#gradient-group(transform="translate(600,300)")
-    rect#white-rect(fill="#FFFFFF", x="440", y="-100", width="300", height="300")
-    rect#gradient(fill="url(#linearGradient-1)", x="264", y="-100", width="177", height="300")
-    circle#js-right-button.h-g(fill="#FFFFFF", cx="205", cy="67", r="7.5")
+    g#left-hand(transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)")
+      g#js-left-hand.h-g
+        rect#Rectangle-24(fill-opacity="0.1", fill="#1F2947", x="110", y="29", width="90", height="44")
+        rect#Rectangle-25(stroke="#1F2947", stroke-width="5", fill="#FBF7E8", x="114", y="37", width="90", height="44")
+        g#js-left-fist
+          g#js-left-fist-wrapper
+            path#Oval-48(d="M18.520939,97 C24.741821,109.235456 37.6220369,117.689487 60,118 C92.7298602,117.652008 119,91.5385667 119,59 C119,27.1134415 92.7298602,1 60,1 C59.5508363,0.978829022 59.0985319,0.979017601 58.6434551,1 L58.6434551,1 L13,1 C5.82029825,1 -2.27373675e-13,6.82029825 -2.27373675e-13,14 C-2.27373675e-13,19.404523 3.29797354,24.0387629 7.99120069,26 C3.29797354,27.9612371 -2.27373675e-13,32.595477 -2.27373675e-13,38 C-2.27373675e-13,42.9881625 2.80940026,47.3201544 6.93222506,49.5 C2.80940026,51.6798456 -2.27373675e-13,56.0118375 -2.27373675e-13,61 C-2.27373675e-13,65.9881625 2.80940026,70.3201544 6.93222506,72.5 C2.80940026,74.6798456 -2.27373675e-13,79.0118375 -2.27373675e-13,84 C-2.27373675e-13,91.1797017 5.82029825,97 13,97 L18.520939,97 Z M6.11132812,26.4038086 L18.9257812,26.4038086 M6.11132812,49.4038086 L18.9257812,49.4038086 M6.11132812,72.4038086 L18.9257812,72.4038086 M19,97 L61,97", fill-opacity="0.1", fill="#1F2947")
+            path#Oval-46(d="M22.520939,103 C28.741821,115.235456 41.6220369,123.689487 64,124 C96.7298602,123.652008 123,97.5385667 123,65 C123,33.1134415 96.7298602,7 64,7 C63.5508363,6.97882902 63.0985319,6.9790176 62.6434551,7 L62.6434551,7 L17,7 C9.82029825,7 4,12.8202983 4,20 C4,25.404523 7.29797354,30.0387629 11.9912007,32 C7.29797354,33.9612371 4,38.595477 4,44 C4,48.9881625 6.80940026,53.3201544 10.9322251,55.5 C6.80940026,57.6798456 4,62.0118375 4,67 C4,71.9881625 6.80940026,76.3201544 10.9322251,78.5 C6.80940026,80.6798456 4,85.0118375 4,90 C4,97.1797017 9.82029825,103 17,103 L22.520939,103 Z M10.1113281,32.4038086 L22.9257812,32.4038086 M10.1113281,55.4038086 L22.9257812,55.4038086 M10.1113281,78.4038086 L22.9257812,78.4038086 M23,103 L65,103", stroke="#1F2947", stroke-width="5", fill="#FBF7E8")
+        
+        rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="13", width="27", height="80", rx="5")
+        rect.js-sleeve(fill="#FFFFFF", x="143", y="17", width="27", height="80", rx="5")
+        rect#fist-mask(transform="translate(100,40)", fill="#FBF7E8", width="35", height="38.5")
 
-  g#left-hand(transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)")
-    g#js-left-hand.h-g
-      rect#Rectangle-24(fill-opacity="0.1", fill="#1F2947", x="110", y="29", width="90", height="44")
-      rect#Rectangle-25(stroke="#1F2947", stroke-width="5", fill="#FBF7E8", x="114", y="37", width="90", height="44")
-      g#js-left-fist
-        g#js-left-fist-wrapper
-          path#Oval-48(d="M18.520939,97 C24.741821,109.235456 37.6220369,117.689487 60,118 C92.7298602,117.652008 119,91.5385667 119,59 C119,27.1134415 92.7298602,1 60,1 C59.5508363,0.978829022 59.0985319,0.979017601 58.6434551,1 L58.6434551,1 L13,1 C5.82029825,1 -2.27373675e-13,6.82029825 -2.27373675e-13,14 C-2.27373675e-13,19.404523 3.29797354,24.0387629 7.99120069,26 C3.29797354,27.9612371 -2.27373675e-13,32.595477 -2.27373675e-13,38 C-2.27373675e-13,42.9881625 2.80940026,47.3201544 6.93222506,49.5 C2.80940026,51.6798456 -2.27373675e-13,56.0118375 -2.27373675e-13,61 C-2.27373675e-13,65.9881625 2.80940026,70.3201544 6.93222506,72.5 C2.80940026,74.6798456 -2.27373675e-13,79.0118375 -2.27373675e-13,84 C-2.27373675e-13,91.1797017 5.82029825,97 13,97 L18.520939,97 Z M6.11132812,26.4038086 L18.9257812,26.4038086 M6.11132812,49.4038086 L18.9257812,49.4038086 M6.11132812,72.4038086 L18.9257812,72.4038086 M19,97 L61,97", fill-opacity="0.1", fill="#1F2947")
-          path#Oval-46(d="M22.520939,103 C28.741821,115.235456 41.6220369,123.689487 64,124 C96.7298602,123.652008 123,97.5385667 123,65 C123,33.1134415 96.7298602,7 64,7 C63.5508363,6.97882902 63.0985319,6.9790176 62.6434551,7 L62.6434551,7 L17,7 C9.82029825,7 4,12.8202983 4,20 C4,25.404523 7.29797354,30.0387629 11.9912007,32 C7.29797354,33.9612371 4,38.595477 4,44 C4,48.9881625 6.80940026,53.3201544 10.9322251,55.5 C6.80940026,57.6798456 4,62.0118375 4,67 C4,71.9881625 6.80940026,76.3201544 10.9322251,78.5 C6.80940026,80.6798456 4,85.0118375 4,90 C4,97.1797017 9.82029825,103 17,103 L22.520939,103 Z M10.1113281,32.4038086 L22.9257812,32.4038086 M10.1113281,55.4038086 L22.9257812,55.4038086 M10.1113281,78.4038086 L22.9257812,78.4038086 M23,103 L65,103", stroke="#1F2947", stroke-width="5", fill="#FBF7E8")
+      mask#left-shirt
+        rect#js-left-shirt.js-shirt(transform="translate(-500,0)", rx="5", fill="white", x="183", y="280", width="282", height="97")
       
-      rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="13", width="27", height="80", rx="5")
-      rect.js-sleeve(fill="#FFFFFF", x="143", y="17", width="27", height="80", rx="5")
-      rect#fist-mask(transform="translate(100,40)", fill="#FBF7E8", width="35", height="38.5")
+    rect(width="1280", height="900", mask="url(#left-shirt)", fill="url(#rose-pattern)")
 
-    mask#left-shirt
-      rect#js-left-shirt.js-shirt(transform="translate(-500,0)", rx="5", fill="white", x="183", y="280", width="282", height="97")
-    
-  rect(width="1280", height="900", mask="url(#left-shirt)", fill="url(#rose-pattern)")
+    g#gradient-group-left(transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)")
+      rect#white-gradient(fill="url(#linearGradient-1)", x="264", y="-100", width="177", height="300")
+      rect#white-rect(fill="#FFFFFF", x="441", y="-100", width="300", height="300")
+      circle#js-left-button.h-g(fill="#9A0009", cx="189.5", cy="87.5", r="7.5")
 
-  g#gradient-group-left(transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)")
-    rect#white-gradient(fill="url(#linearGradient-1)", x="264", y="-100", width="177", height="300")
-    rect#white-rect(fill="#FFFFFF", x="441", y="-100", width="300", height="300")
-    circle#js-left-button.h-g(fill="#9A0009", cx="189.5", cy="87.5", r="7.5")
+      
 
     
-
-  
