working on logo

--- a/index.jade
+++ b/index.jade
@@ -17,6 +17,7 @@ html
       include parts/svg
       include parts/triangles
       include parts/waves.svg
+      include parts/logo.svg
 
 
     script(src="bower_components/jquery/dist/jquery.js")
