--- a/index.jade
+++ b/index.jade
@@ -29,6 +29,7 @@ html
     script(src="js/triangles.js")
     script(src="js/svg.js")
     script(src="js/meets.js")
+    script(src="js/logo.js")
     script(src="js/main.js")
 
 
