--- a/parts/svg.jade
+++ b/parts/svg.jade
@@ -17,7 +17,7 @@ g#js-svg
   mask#svg-g-mask
     g(transform="translate(#{svgTranslate},0)")
       g.svg-stroke#js-svg-g-wrapper
-        path#js-svg-g.svg-letter(d='M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572', opacity="0")
+        path#js-svg-g.svg-letter(d='M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572', opacity="0", stroke-linecap="round")
 
   //- mask#svg-text-mask
     //- g(opacity="0",transform="translate(#{svgTranslate+370},650)")
