--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -5,9 +5,9 @@ defs
 
 g#js-meets
   - var blue = '#1F2947'
-  - var burstLen = 25, burstStart = 100
+  - var burstLen = 35, burstStart = 100
   mask#burst-mask
-    g#js-meets-burst
+    g#js-meets-burst(transform="translate(0,10)")
       - var cnt = 7, PI = 3.141598, rotateStep = 360/cnt, rotateAngle = 0;
       - var centerX = 640, centerY = 450, radius = burstStart, radius2 = burstStart + burstLen, angle = 50;
       - var step = (2*PI)/cnt, initRotate = 40;
@@ -16,7 +16,7 @@ g#js-meets
         - var y1 = centerY + Math.sin(angle)*radius
         - var x2 = centerX + Math.cos(angle)*radius2
         - var y2 = centerY + Math.sin(angle)*radius2
-        path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="10", stroke-linecap="round")
+        path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="8", stroke-linecap="round")
         - angle = angle + step
 
   rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
@@ -48,7 +48,7 @@ g#js-meets
 
         mask#right-shirt
           rect#js-right-shirt.js-shirt(transform="translate(500,0)", fill="white", rx="5", x="770", y="288", width="282", height="97")
-        rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="35", height="39")
+        rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="40", height="39")
 
     rect(width="1280", height="900", mask="url(#right-shirt)", fill="url(#blue-flowers-pattern)")
 
@@ -68,7 +68,7 @@ g#js-meets
         
         rect.js-sleeve(fill-opacity="0.1", fill="#000000", x="139", y="18", width="27", height="75", rx="5")
         rect.js-sleeve(fill="#FFFFFF", x="143", y="17", width="27", height="80", rx="5")
-        rect#fist-mask(transform="translate(100,40)", fill="#FBF7E8", width="35", height="38.5")
+        rect#fist-mask(transform="translate(100,40)", fill="#FBF7E8", width="40", height="38.5")
 
       mask#left-shirt
         rect#js-left-shirt.js-shirt(transform="translate(-500,0)", rx="5", fill="white", x="183", y="280", width="282", height="97")
