--- a/index.jade
+++ b/index.jade
@@ -18,7 +18,7 @@ html
       include parts/triangles
       include parts/logo.svg
       include parts/waves.svg
-
+      include parts/fish
 
     script(src="bower_components/jquery/dist/jquery.js")
     script(src="bower_components/velocity/jquery.velocity.min.js")
@@ -30,6 +30,7 @@ html
     script(src="js/svg.js")
     script(src="js/meets.js")
     script(src="js/logo.js")
+    script(src="js/fish.js")
     script(src="js/main.js")
 
 
