working on meets blow

--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -81,5 +81,13 @@ g#js-meets
       circle#js-left-button.h-g(fill="#9A0009", cx="189.5", cy="87.5", r="7.5")
 
       
-
-    
+  g#js-blow-paths(stroke="black")
+    line(x1='374', y1='318.559', x2='18.805', y2='63.364')
+    line(x1='374', y1='318.559', x2='48.026', y2='642.584')
+    line(x1='374', y1='318.559', x2='713.61', y2='660.767')
+    line(x1='374', y1='318.559', x2='718.805', y2='71.805')
+    line(x1='374', y1='318.559', x2='299.974', y2='63.364')
+    line(x1='374', y1='318.559', x2='283.74', y2='660.767')
+    line(x1='374', y1='318.559', x2='18.805', y2='219.857')
+    line(x1='377.247', y1='318.559', x2='724', y2='489.662')
+   
