--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -19,6 +19,10 @@ g#js-meets
         path(d="M#{x1},#{y1} L#{x2},#{y2}", opacity="1", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="8", stroke-linecap="round")
         - angle = angle + step
 
+  g#js-meets-blow(transform="translate(625,435)").h-g
+    - for (var i = 0; i < 25; i++)
+      rect(fill="#aaa", width="#{rand(10,30)}", height="#{rand(10,30)}")
+
   rect(width="1280", height="900", fill="url(#space-dogs-pattern)", mask="url(#meets-mask)")
   g#js-meets-circles
     - for (var i = 0; i < 12; i++ )
@@ -80,8 +84,4 @@ g#js-meets
       rect#white-rect(fill="#FFFFFF", x="441", y="-100", width="300", height="300")
       circle#js-left-button.h-g(fill="#9A0009", cx="189.5", cy="87.5", r="7.5")
 
-  g#js-meets-blow(transform="translate(625,435)").h-g
-    - for (var i = 0; i < 25; i++)
-      rect(fill="#333", width="#{rand(20,40)}", height="#{rand(20,40)}")
-
-    
+  
