--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -62,7 +62,7 @@ g#js-meets.h-g1
         rect.js-sleeve(fill="#FFFFFF", x="143", y="20", width="27", height="80", rx="5")
 
         mask#right-shirt
-          rect#js-right-shirt.js-shirt(transform="translate(500,0)", fill="white", rx="5", x="770", y="288", width="282", height="97")
+          rect#js-right-shirt.js-shirt(x="1570", fill="white", rx="5", x2="770", y="288", width="282", height="97")
         rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="40", height="39")
 
     rect(width="1280", height="900", mask="url(#right-shirt)", fill="url(#blue-flowers-pattern)")
@@ -86,7 +86,7 @@ g#js-meets.h-g1
         rect#fist-mask(transform="translate(100,40)", fill="#FBF7E8", width="40", height="38.5")
 
       mask#left-shirt
-        rect#js-left-shirt.js-shirt(transform="translate(-500,0)", rx="5", fill="white", x="183", y="280", width="282", height="97")
+        rect#js-left-shirt.js-shirt(x="-500", rx="5", fill="white", x2="183", y="280", width="282", height="97")
       
     rect(width="1280", height="900", mask="url(#left-shirt)", fill="url(#rose-pattern)")
 
