--- a/parts/meets.jade
+++ b/parts/meets.jade
@@ -65,7 +65,7 @@ g#js-meets.h-g1
           rect#js-right-shirt.js-shirt(x="1570", fill="white", rx="5", x2="770", y="288", width="282", height="97")
         rect#fist-mask(transform="translate(100,42.5)", fill="#FBF7E8", width="40", height="39")
 
-    rect(width="1280", height="900", mask="url(#right-shirt)", fill="url(#blue-flowers-pattern)")
+    rect.js-shirt-wall(width="1280", height="900", mask="url(#right-shirt)", fill="url(#blue-flowers-pattern)").h-g
 
     g#gradient-group(transform="translate(600,300)")
       rect#white-rect(fill="#FFFFFF", x="440", y="-100", width="300", height="300")
@@ -88,7 +88,7 @@ g#js-meets.h-g1
       mask#left-shirt
         rect#js-left-shirt.js-shirt(x="-500", rx="5", fill="white", x2="183", y="280", width="282", height="97")
       
-    rect(width="1280", height="900", mask="url(#left-shirt)", fill="url(#rose-pattern)")
+    rect.js-shirt-wall(width="1280", height="900", mask="url(#left-shirt)", fill="url(#rose-pattern)").h-g
 
     g#gradient-group-left(transform="translate(312.000000, 322.000000) rotate(-180.000000) translate(-312.000000, -322.000000) translate(3.000000, 260.000000)")
       rect#white-gradient(fill="url(#linearGradient-1)", x="264", y="-100", width="177", height="300")
