--- a/parts/caleydoscope.jade
+++ b/parts/caleydoscope.jade
@@ -63,7 +63,7 @@ g#js-entire-caleydoscope.h-g
       - var y1 = centerY + Math.sin(angle)*radius
       - var x2 = centerX + Math.cos(angle)*radius2
       - var y2 = centerY + Math.sin(angle)*radius2
-      path(d="M#{x1},#{y1} L#{x2},#{y2}", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="4", stroke-linecap="round", opacity=".85")
+      path(d="M#{x1},#{y1} L#{x2},#{y2}", stroke-dashoffset="#{burstLen+1}", stroke-dasharray="#{burstLen+1}", stroke="white", stroke-width="4", stroke-linecap="round", opacity=".85")
       - angle = angle + step
 
   - var blue = '#1F2947'
@@ -78,7 +78,7 @@ g#js-entire-caleydoscope.h-g
       - var y1 = centerY + Math.sin(angle)*radius
       - var x2 = centerX + Math.cos(angle)*radius2
       - var y2 = centerY + Math.sin(angle)*radius2
-      path(d="M#{x1},#{y1} L#{x2},#{y2}", stroke-dashoffset="#{burstLen}", stroke-dasharray="#{burstLen}", stroke="white", stroke-width="4", stroke-linecap="round", opacity=".85")
+      path(d="M#{x1},#{y1} L#{x2},#{y2}", stroke-dashoffset="#{burstLen+1}", stroke-dasharray="#{burstLen+1}", stroke="white", stroke-width="4", stroke-linecap="round", opacity=".85")
       - angle = angle + step
 
   
